# copilot-sdk-multi-agent-swarm

./: .dockerignore  .env  .env.template  .gitignore  Dockerfile  LICENSE  Makefile  README.md  alembic.ini  dbt.json  docker-compose.yml  pyproject.toml  pyrightconfig.json  report_synthesis.md  sdf.json  sqlmesh.json
alembic/: env.py
alembic/versions/: 21094e8dafe2_initial_schema.py
docs/SDK/: DRAFT-ISSUE-customAgents-tools-not-enforced.md  TOOL-USAGE-INDEPENDENT-RESEARCH.md  TOOL-USAGE-REJOINDER.md  TOOL-USAGE-THROUGH-SDK-AND-CUSTOM-AGENTS-RESEARCHED.md  TOOL-USAGE-THROUGH-SDK-AND-CUSTOM-AGENTS.md
docs/issues/: DRAFT-ISSUE-customAgents-tools-not-enforced.md
documentation/: Agents.md  Architecture.md  Communication.md  MCP-Swarm-Server.md  available-models.md  replacement-variables.md  template-creation-guide.md  test-prompts.md
documentation/example_research_output/: autonomous-agent-architecture.md  multi-agent-communication-patterns.md  rag-vector-memory-based-prefill-1.md  rag-vector-memory-based-prefill-2.md  strategy-for-microsoft-fabric-medallion-architecture.md  warehouse-movement-system-recommendations.md  warehouse-movement-system-v1.md
documentation/issues/: DRAFT-ISSUE-custom-agents-override-tool-behavior.md  DRAFT-ISSUE-customAgents-tools-not-enforced.md
planning/backlog/: agent-card-expansion.md  azure-msal-auth.md  better-chat-logging.md  chat-ux-parity.md  deployment.md  guardrails.md  live-chat-swarm-awareness.md  mermaid-toggle.md  recover-failed-swarm.md  template-packs-mcp-skills-deploy.md
planning/completed/: 2026-03-23-yaml-templates-integration-tests.md  2026-03-26-swarm-refinement-rich-chat-with-session-resume.md  bug-duplicate-events-on-front-end.md  chat-ux-parity.md  persistence-layer.md  swarm-refinement-feedback-loop.md  swarm-state-mcp-server.md
planning/in-progress/: 2026-03-26-streaming-mermaid-toolcards-docker-templates.md  qa-dashboard-transition.md
planning/spikes/: spike_custom_agent_tools.py  spike_model_results.json  spike_model_tool_compliance.py  spike_no_custom_agents.py  spike_no_custom_agents_results.json  spike_wire_dump.py  spike_wire_dump_with_rpc.py
scripts/: debug_plan.py  dev.sh  list-models.py
src/: fibonacci.py
src/backend/: config.py  events.py  fibonacci.py  logging_config.py  main.py
src/copilot_sdk_multi_agent_swarm.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
src/frontend/: package-lock.json  package.json  vite.config.ts
src/hello_world/: core.py
src/prefill/: hybrid_pipeline.py  interfaces.py  memory_strategy.py  rag_strategy.py  vector_strategy.py
src/templates/: system-prompt.md
templates/deep-research/: leader.md  synthesis.md  worker-data-analyst.md  worker-skeptic.md
templates/software-development/: _template.yaml  leader.md  worker-architect.md
templates/warehouse-optimizer/: leader.md  synthesis.md  worker-layout-optimizer.md
tests/: README.md  conftest.py  test_api.py  test_cancellation.py  test_event_bridge.py  test_event_bus.py  test_orchestrator.py  test_swarm_tools.py  test_task_board.py  test_templates.py
tests/integration/: conftest.py  test_event_bridge_live.py  test_event_logger.py  test_infrastructure.py  test_mcp_mount.py  test_orchestrator_live.py  test_repository.py  test_session_basics.py  test_swarm_service.py  test_swarm_tools_live.py
tests/unit/: test_api.py  test_cancellation.py  test_logging.py  (+16 more)
(+116 files in other folders)
