[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-sdk-multi-agent-swarm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "github-copilot-sdk>=0.1.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "psycopg2-binary>=2.9",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live copilot-cli (deselect with '-m not integration')",
    "db: requires Postgres (deselect with '-m not db')",
]

[tool.setuptools.packages.find]
where = ["src"]
