[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "copilot-sdk-multi-agent-swarm"
version = "0.1.0"
requires-python = ">=3.10"
dependencies = [
    "github-copilot-sdk>=0.1.0",
    "pydantic>=2.0",
    "fastapi>=0.100",
    "uvicorn>=0.23",
    "websockets>=12.0",
    "pyyaml>=6.0",
    "structlog>=24.0",
    "python-multipart>=0.0.6",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.14",
    "mcp[cli]>=1.9",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-asyncio>=0.21",
    "httpx>=0.24",
    "psycopg2-binary>=2.9",
    "ruff>=0.8",
    "pyright>=1.1",
    "pre-commit>=3.0",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
markers = [
    "integration: requires live copilot-cli (deselect with '-m not integration')",
    "db: requires Postgres (deselect with '-m not db')",
]

[tool.ruff]
target-version = "py310"
line-length = 120
src = ["src"]

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "W",    # pycodestyle warnings
    "F",    # pyflakes
    "I",    # isort
    "UP",   # pyupgrade
    "B",    # flake8-bugbear
    "S",    # flake8-bandit (security)
    "T20",  # flake8-print
    "SIM",  # flake8-simplify
    "RUF",  # ruff-specific
]
ignore = [
    "S101",  # assert used (fine in tests)
    "E501",  # line-too-long — enforced by formatter, not linter
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["S101", "S106", "S108", "S110", "RUF006"]
"src/hello_world/**" = ["T201"]
"src/prefill/**" = ["T201"]
"tests/integration/test_orchestrator_live.py" = ["T201"]

[tool.setuptools.packages.find]
where = ["src"]
